RESOLVED FIXED78861
[WK2] Clearing notifications does not clean up internal state
https://bugs.webkit.org/show_bug.cgi?id=78861
Summary [WK2] Clearing notifications does not clean up internal state
Jon Lee
Reported 2012-02-16 17:09:43 PST
When the page clears notifications (URL changed, window closed, etc), the WebNotificationManager forwards that request to the client, but doesn't clean up its internal state. This could lead to notifications not being released when they should since the manager is still holding onto them.
Attachments
Patch (5.84 KB, patch)
2012-02-16 17:17 PST, Jon Lee
andersca: review+
Radar WebKit Bug Importer
Comment 1 2012-02-16 17:12:02 PST
Jon Lee
Comment 2 2012-02-16 17:17:20 PST
Jon Lee
Comment 3 2012-02-22 15:44:55 PST
Note You need to log in before you can comment on or make changes to this bug.